# citest

./: .travis.yml  CMakeLists.txt  main.cpp
include/: foofunc.h
src/: foofunc.cpp  main.cpp
test/: CMakeLists.txt  footest.cpp
